--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,3 @@
-spring.application.name=PBGym
-spring.datasource.url = jdbc:postgresql://${env.POSTGRES_URL}
-spring.datasource.username = ${env.POSTGRES_USER}
-spring.datasource.password = ${env.POSTGRES_PASSWORD}
-spring.datasource.driver-class-name = org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql = true
-spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.database = postgresql
-spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
+spring.application.name = PBGym
 
-#spring.datasource.url=jdbc:h2:mem:testdb;Mode=PostgreSQL
-#spring.datasource.username=sa
-#spring.datasource.password=password
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.h2.console.enabled=true
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
+spring.profiles.active: test
