--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,7 +7,7 @@ spring.datasource.username = ${env.POSTGRES_USER}
 spring.datasource.password = ${env.POSTGRES_PASSWORD}
 spring.datasource.driver-class-name = org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql = true
+spring.jpa.show-sql = false
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.database = postgresql
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
