--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -3,10 +3,11 @@ springdoc.api-docs.enabled=true
 springdoc.swagger-ui.path=swagger
 
 #H2 Datasource
-spring.datasource.url=jdbc:h2:mem:testdb;Mode=PostgreSQL
+spring.datasource.url=jdbc:h2:file:./testdb;Mode=PostgreSQL
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
