Enable swagger in prod

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,6 @@
-#Disable Swagger
-springdoc.api-docs.enabled=false
+#Enable Swagger
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.path=swagger
 
 #Postgres Datasource
 spring.datasource.url = jdbc:postgresql://${env.POSTGRES_URL}
